# faceResearch

./: CMakeLists.txt  README.md
exe/Emotion/: CMakeLists.txt  Emotion.cpp  Emotion.h
exe/PrCLR/: CMakeLists.txt  MyForm.cpp  MyForm.h  MyForm.resx
exe/test2/: CMakeLists.txt  test.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceAnalyser/src/: GazeEstimation.cpp
lib/local/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.h  proxies_wrap_csh.cxx  proxiesface.i
lib/local/FaceLandmarkImg/include/: FaceLandmarkImg.h
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/include/: stdafx.h
lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  Patch_experts.cpp
lib/local/faceReclibrary/: CMakeLists.txt  FaceRecDLib.cpp  basictypes.h
lib/local/faceReclibrary/include/: FaceRecDLib.h
